fix corner label overflow

--- a/src/app/info-zone/categories/projects/project-item/project-item.component.scss
+++ b/src/app/info-zone/categories/projects/project-item/project-item.component.scss
@@ -8,6 +8,7 @@
   max-width: 34vw;
   border-radius: 1em;
   position: relative;
+  overflow: hidden;
 
   div > a > fa-icon {
     right: 10px;
